* 2014-08-05 - lars.hoogestraat@open-xchange.com

 - Fix for bug 33869: Added missing description in CLT for quota module 'attachment'.

* 2014-08-04 - marcus.klein@open-xchange.com

 - Fix for bug 33891: Removed superfluous line throwing always an exception.

* 2014-08-01 - thorben.betten@open-xchange.com

 - Fix for bug 33857: Do not log a warning in case Content-Type misses any charset information; just detect it and continue
 - Fix for bug 33715: Accept new parameter "attach_src" for action=get request to let the client signal RFC822 source is supposed to be
                      attached to generated JSON mail representation

* 2014-07-31 - thorben.betten@open-xchange.com

 - Fix for bug 33839: Escape site information when generating the publication site from selected template
 - Fix for bug 33850: Keep "Message-Id" header if present

* 2014-07-30 - thorben.betten@open-xchange.com

 - Fix for bug 27711: Output standard HTML error page if requested resource appears not to be in JSON output format

* 2014-07-30 - tobias.friedrich@open-xchange.com

 - Fix for bug 32897: Send empty string for default alarms in CalDAV

* 2014-07-30 - martin.schneider@open-xchange.com

 - Fix for bug 33529: Provide more information for using report client parameter and use hazelcast portable serialization

* 2014-07-29 - tobias.friedrich@open-xchange.com

 - Fix for bug 33652: Also accept "updateToken" requests without service identifier
 - Fix for bug 30654: Try fallback based on the file extension in case there's no preview service for mime type

* 2014-07-28 - lars.hoogestraat@open-xchange.com

 - Fix for bug 33577: Improved sanitizing of snippet management

* 2014-07-28 - thorben.betten@open-xchange.com

 - Fix for bug 33728: Drop SUBSCRIPTION bit from capabilities bit mask if not allowed

* 2014-07-26 - thorben.betten@open-xchange.com

 - Fix for bug 33620: Sanitize RSS feed's title, too

* 2014-07-22 - thorben.betten@open-xchange.com
